--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
 			</div>
 			<div class="nav-content">
 				<nav role="navigation">
-				  <ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">2017-2018</a>
-						<ul class="dropdown">
-							<li><a href="#">Choice Websites</a></li>
-							<li><a href="#">Metro Project</a></li>
-							<li><a href="#">Sonic Pi</a></li>
-						</ul>
-					</li>
-					<li><a href="#">2018-2019</a>
-						<ul class="dropdown">
-							<li><a href="#">Robots</a></li>
-							<li><a href="#">Android Studio</a></li>
-							<li><a href="#">Digital Escape Rooms</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Essential Skills</a></li>
-				  </ul>
+					<ul>
+						<li><a href="https://saradajani.github.io/homepage/home.html">Home</a></li>
+						<li><a href="#">2017-2018</a>
+							<ul class="dropdown">
+								<li><a href="https://ashleygonzalez9.github.io/studentwebsitepage/student_websites.html# ">Choice Websites</a></li>
+								<li><a href="https://saradajani.github.io/sonicpi/pi.html">Metro Project</a></li>
+								<li><a href="#">Sonic Pi</a></li>
+							</ul>
+						</li>
+						<li><a href="#">2018-2019</a>
+							<ul class="dropdown">
+								<li><a href="https://carolinaalfaro.github.io/robt/robots.html">Robots</a></li>
+								<li><a href="https://carolinaalfaro.github.io/appps/index.html">Android Studio</a></li>
+								<li><a href="https://rayadajani.github.io/EscapeRooms/escaperooms.html">Digital Escape Rooms</a>
+								</li>
+							</ul>
+						</li>
+						
+						<li><a href="https://ashleygonzalez9.github.io/essential_skills/Essential_Skills.html">Essential Skills</a>
+						</li>
+					</ul>
 				</nav>
 			</div>
 		</div>
