--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 		<br></br>
 		<br></br>
 		<div class="top-second lightpurple center-content">
-			<p>Android Studio</p>
+			<h1>Android Studio</h1>
 		</div>
 		
 		<div class="top-third">
 			<div class="thirdmini-1 grey">
 				<center><img src="images/guy.png" height="100px" width="150px" class="restrict-img-size"/></center>
 			</div>
-			<div class="thirdmini-2 grey">
-				<center><p3> For the Mobile App Development Project, computer science 11th and 12th grade students were asked to create a group app that revolved around the idea that was based off another app of their 
-				<br></br>interest. For each group there was a junior paired with a senior. Equally collaborating as well as independently, the groups implemented functionality involving a toast pop up, sound, input elements that 
-				<br></br>permit you to change screen, or image by using XML and Java which are both located in Android Studio. </p3></center>
+			<div class="thirdmini-2 grey center-content">
+					<center><p3> For the Mobile App Development Project, computer science 11th and 12th grade students were asked to create a group app that revolved around the idea that was based off another app of their 
+					interest. For each group there was a junior paired with a senior. Equally collaborating as well as independently, the groups implemented functionality involving a toast pop up, sound, input elements that 
+					permit you to change screen, or image by using XML and Java which are both located in Android Studio.</p3></center>
 			</div>
 			<div class="thirdmini-3 grey">
 				<center><img src="images/applogo.PNG" height="115px" width="150px" class="restrict-img-size"/></center>
