--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						<center><img src="images/netlogo.PNG" height="135px" width="125px" class="restrict-img-size"/></center>
 					</div>
 					<div class="right_square lightgrey center-content">
-						<center><p2> The app, NetFlex was built by Donyae Solo along with Ryan Doherty. The functions incorporated in this app allow you to browse through movie trailers with the purpose in spotting out with ones you enjoyed and that you'll want to save. A bonus feature is also added that permits the user to randomly generate three movies that are related to a category that you chose. </p2></center>
+						<center><p2> NetFlex was built by Donyae Solo along with Ryan Doherty. The functions incorporated in this app allow you to browse through movie trailers with the purpose in spotting out with ones you enjoyed and that you'll want to save. A bonus feature is also added that permits the user to randomly generate three movies that are related to a category that you chose. </p2></center>
 					</div>
 				</div>
 			</div>
