--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 						<li><center><a href="#">2017-2018</a></center>
 							<ul class="dropdown">
 								<li><a href="https://ashleygonzalez9.github.io/studentwebsitepage/student_websites.html# ">Choice Websites</a></li>
-								<li><a href="https://saradajani.github.io/sonicpi/pi.html">Metro Project</a></li>
-								<li><a href="#">Sonic Pi</a></li>
+								<li><a href="https://saradajani.github.io/sonicpi/pi.html">Sonic Pi</a></li>
 							</ul>
 						</li>
 						<li><center><a href="#">2018-2019</a></center>
